Error: Error: local-dir should be a folder (must end with /)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
           server: w00ee8e3.kasserver.com
           username: f017005a
           password: ${{ secrets.ftp_password }}
-          local-dir: ./out
+          local-dir: ./out/
